# integrity_verifier

./: .gitignore  CMakeLists.txt  File_Integrity_Checker.org  LICENSE  README.md  main.cpp  process.org
docs/: File_Integrity_Checker.org  process.org
include/: AcceptedFSType.h  AcceptedFiles.h  DirectoryContent.h  DirectoryContents.h  FileInfo.h  IntegrityCore.h  RecordMode.h  Statuses.h  ValidateMessage.h  WriteMode.h  hash_util.h  status_out.h  statuses.h
src/: CMakeLists.txt  DirectoryContent.cc  FileInfo.cc  IntegrityCore.cc  RecordMode.cc  WriteMode.cc  hash_util.cc  main.cc  main.cpp  status_out.cc  vcpkg.json
tests/: CMakeLists.txt  IntegrityCoreTest.cc  RecordModeTest.cc  TestHelpers.cc  TestHelpers.h  WriteModeTest.cc
tests/include/: TestHelpers.h
